Fix for footer on mobile screens

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ font-family: monospace;
 font-size: 120%;
 }
 
+body{
+height: 100%;
+min-height: 100%;
+}
+
 .flexbox{
 display: flex;
 align-items: flex-end;
@@ -87,7 +92,7 @@ line-height: 200%;
 }
 
 .footer{
-  position: fixed;
+  position: relative;
   bottom: 0;
   left: 0;
   right: 0;
